feat(api): add openapi on products
