# libs/api/products/src/lib/dtos/create-product.dto.ts
@@ -1,0 +1,11 @@
+import { IsString, MaxLength, MinLength } from 'class-validator';
+
+export class CreateProductDto {
+  categoryId!: number;
+
+  name!: string;
+
+  // seller!: string;
+
+  records!: string[];
+}
