# libs/api/products/src/lib/products.module.ts
@@ -1,9 +1,11 @@
+import { ProductsController } from './products.controller';
 import { Module } from '@nestjs/common';
 import { DatabaseModule } from '@vg/api-database';
+import { ProductsService } from './products.service';
 
 @Module({
-  controllers: [],
-  providers: [],
+  controllers: [ProductsController],
+  providers: [ProductsService],
   exports: [],
   imports: [DatabaseModule],
 })
