# libs/api/products/src/lib/products.service.ts
@@ -1,20 +1,39 @@
 import { Inject, Injectable } from '@nestjs/common';
 import { Database, PG_CONNECTION, product } from '@vg/api-database';
 import {} from '@vg/shared-constants';
+import { eq } from 'drizzle-orm';
 
 @Injectable()
 export class ProductsService {
   constructor(@Inject(PG_CONNECTION) private conn: Database) {}
 
-  create() {}
-
   find() {
     return this.conn.select().from(product);
   }
 
-  findOne() {}
+  async findOne(id: number) {
+    const [res] = await this.conn
+      .select()
+      .from(product)
+      .where(eq(product.productId, id));
+    return res;
+  }
 
-  update() {}
+  findProductsByCategory(categoryId: number) {
+    // return this.conn.select().from(product).where({ categoryId });
+  }
 
-  delete() {}
+  findProductsByUser(userId: number) {
+    // return this.conn.select().from(product).where({ userId });
+  }
+
+  create() {}
+
+  update(id: number, body: any) {
+    // return this.conn.select().from(product).where({ id });
+  }
+
+  delete(id: number) {
+    // return this.conn.select().from(product).where({ id });
+  }
 }
